--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h3>My first clone and fork in github and git</h3>
     <!-- Your GitHub user name -->
-    
+    <p>I'm so happy, the beginning of a large way</p>
     <!-- Your favorite coding language -->
-
+    <p>Absolutely, Python!</p>
   </body>
 </html>
