--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,13 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>Este es un ejercicio</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h3>Sebastian Chuaqui</h3>
 
-    <!-- Your GitHub user name -->
+    <a href="https://github.com/SebaChuaqui">Mi Github</a>
     
-    <!-- Your favorite coding language -->
+    <h5>Mi Lenguaje favorito es: HTML</h5>
 
   </body>
 </html>
