--- a/demo_index.html
+++ b/demo_index.html
@@ -9,9 +9,9 @@
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
-    <!-- Your GitHub user name -->
+    <!-- IBishopcode -->
     
-    <!-- Your favorite coding language -->
+    <!-- Javascript Python -->
 
   </body>
 </html>
