cambios en demo_index.html hechos con editor vi en Terminal

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Juan Malaver</p>
     <!-- Your GitHub user name -->
-    
+    <p>jemm2008</p>
     <!-- Your favorite coding language -->
-
+    <p>More than a language but This Course</p>
   </body>
 </html>
+
