Ingreso de datos requeridos en demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h3>Roberto Carmona Astorga</h3>
 
-    <!-- Your GitHub user name -->
+    <a href="https://github.com/RobertoCarmo">Mi usuario de Github</a>
     
-    <!-- Your favorite coding language -->
+    <p>Mi lenguaje favorito es JavaScript</p>
 
   </body>
 </html>
