se modifica demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h3>José Ortega</h3>
 
     <!-- Your GitHub user name -->
+    <h3>jrortega07</h3>
     
     <!-- Your favorite coding language -->
+    <h3>Python</h3>
 
   </body>
 </html>
