Actividad Update y Commit

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Trabajando en git</p>
     <!-- Your name -->
+    <p>Cristan Cuevas</p>
 
     <!-- Your GitHub user name -->
+    <h3>CrisCuevas84</h3>
     
     <!-- Your favorite coding language -->
+    <h5>Python</h5>
 
   </body>
 </html>
