--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Git Demo Index Page</title>
+    <title>Git Demo Index Page Juan_Silva_ver</title>
   </head>
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+hello!
     <!-- Your name -->
-
+JUAN PABLO SILVA
     <!-- Your GitHub user name -->
-    
+jsilva16	
     <!-- Your favorite coding language -->
-
+El lenguaje del amor... 
+mentira, es python jaja
   </body>
 </html>
