--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    Im doing the git update and commit assignment
     <!-- Your name -->
-
+    Eduardo
     <!-- Your GitHub user name -->
-    
+    EduReyesM    
     <!-- Your favorite coding language -->
-
+    Python
   </body>
 </html>
