Making my additions to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    Joe
 
     <!-- Your GitHub user name -->
-    
+    theOtherJoe
     <!-- Your favorite coding language -->
-
+    python currently, bash (I know it's technically not a "coding" language) is still near and dear to my heart.
   </body>
 </html>
