--- a/demo_index.html
+++ b/demo_index.html
@@ -8,7 +8,7 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-	Oscar Guerrer
+	Oscar Guerrero
     <!-- Your GitHub user name -->
     JanicsChile
     <!-- Your favorite coding language -->
