ahora si edite el gitdemo

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+<h1>Hola soy Carlos de Chile</h1>
     <!-- Your GitHub user name -->
-    
+    <p>Charlie83cl es mi usuario actual en github sigueme!</p>
     <!-- Your favorite coding language -->
-
+<p>javascript me gusta mucho por sus variadas funciones</p>
   </body>
 </html>
