--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,20 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>
+      This is our test repository to test forking a repository and sending a
+      pull request back to make changes to the original
+    </p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h3>Ernesto Orozco</h3>
     <!-- Your GitHub user name -->
-    
+    <h4>Elnennu</h4>
     <!-- Your favorite coding language -->
-
+    <ul>
+      <li>Python</li>
+      <li>PHP</li>
+      <li>Perl</li>
+    </ul>
   </body>
 </html>
