--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="rainbows.css">
     <title>Git Demo Index Page</title>
   </head>
   <body>
-    <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <div></div>
+    <div id="second-div">
+      <h1>Git Demo</h1>
+      <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+        <!-- Add some information about yourself below -->
+        <!-- Your name -->
+        <p>My name is Wesley!</p>
+        <!-- Your GitHub user name -->
+        <p>My GitHub user name is SeraphDev6!</p>
+        <!-- Your favorite coding language -->
+        <p>My favorite coding language would probably be C# although I really enjoy Python as well!</p>
+    </div>
   </body>
 </html>
