--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am exited to be a student of Coding Dojo</p>
     <!-- Your name -->
+    <p>My name is Ivana</p>
 
     <!-- Your GitHub user name -->
+    <p>My GitGub user name is ivana-vucenovic</p>
     
     <!-- Your favorite coding language -->
+    <p>My favorite coding language is JavaScript so far</p>
 
   </body>
 </html>
