--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is Tommy Shinn.</p>
     <!-- Your GitHub user name -->
-    
+    <p>Noodlenood is my GitHub name.</p>
     <!-- Your favorite coding language -->
-
+    <p>Html is my favorite coding language.</p>
   </body>
 </html>
