My first pull request

--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,11 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
+    <p>My name is dennis and I am taking the CodingDojo bootcamp</p>
     <!-- Your name -->
 
-    <!-- Your GitHub user name -->
+    <p>My github username is denis1301</p>
     
-    <!-- Your favorite coding language -->
-
+    <p>Favorite language is JS and Python</p>
   </body>
 </html>
