--- a/demo_index.html
+++ b/demo_index.html
@@ -9,7 +9,7 @@
     <p>My name is Julian Sunn.  I am a Git and GitHub newbie but hopefully with these exercises, I will be on my way to being a Git and GitHub Wizard!</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1>Julian Sunn</h1>
     <!-- Your GitHub user name -->
     <h1>juliansunn</h1>
     <!-- Your favorite coding language -->
