added coding language

--- a/demo_index.html
+++ b/demo_index.html
@@ -13,6 +13,6 @@
     <!-- Your GitHub user name -->
     <h1>juliansunn</h1>
     <!-- Your favorite coding language -->
-
+    <h1>Python obvi</h1>
   </body>
 </html>
