finish new feature

--- a/demo_index.html
+++ b/demo_index.html
@@ -13,5 +13,8 @@
     javillegasna
     <!-- Your favorite coding language -->
     c++
+    <!-- Your favorite coding idle -->
+    vscode
   </body>
+  
 </html>
