--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,16 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>
+      This is our test repository to test forking a repository and sending a
+      pull request back to make changes to the original
+    </p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1>My name is Ernesto</h1>
     <!-- Your GitHub user name -->
-    
+    <h2>Eavilesz</h2>
     <!-- Your favorite coding language -->
-
+    <h3>JavaScript</h3>
   </body>
 </html>
