updated index file

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,19 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <br>
+    <br>
+    <p>Thomas Hollingshead
+    </p>
 
     <!-- Your GitHub user name -->
-    
+    <br>
+    <br>
+    <p>tomleon2</p>
     <!-- Your favorite coding language -->
+    <br>
+    <br>
+    <p>Python</p>
 
   </body>
 </html>
