--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,12 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>I am a life long learner, always excited about learning new things and finding innovative ways of simplifying things</p>
+    <p>and I by Liza Nompuku</p>
 
-    <!-- Your GitHub user name -->
+    <p>Github username: Lizalise504</p>
     
-    <!-- Your favorite coding language -->
+    <p>Java</p>
 
   </body>
 </html>
