Changes made to the index.html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,14 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    This is the first time I fork a repo
     <!-- Your name -->
+    My name is Jason Bangie
 
     <!-- Your GitHub user name -->
-    
+    JAB47 is my username
     <!-- Your favorite coding language -->
+    I do not have a favourate coding language as yet how ever I am enjoing this
 
   </body>
-</html>
+<html>
