--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,12 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    Love coding, outdoors and networking
+    Errol Mabusela
 
-    <!-- Your GitHub user name -->
+    ErrolCode
     
-    <!-- Your favorite coding language -->
+    HTML & CSS
 
   </body>
 </html>
