--- a/demo_index.html
+++ b/demo_index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Git Demo</h1>
+    <p>Added paragraph</p>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
